--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Requirements
 ============
 
 Lemon Launcher should work with most platforms that support SDL.
-I've tested Linux, Mac OS X, and Windows.  These are the dependancies:
+I've tested Linux, Mac OS X, and Windows.  These are the dependencies:
 
 * SDL
 * SDL_image (with at least PNG support)
@@ -19,7 +19,7 @@ I've tested Linux, Mac OS X, and Windows.  These are the dependancies:
 Installation
 ============
 
-Install the dependancies.  Extract the tar.gz file and run:
+Install the dependencies.  Extract the tar.gz file and run:
 ./configure --prefix=/usr
 make
 sudo make install
@@ -28,9 +28,44 @@ By default lemon launcher will search for configuration files in your home
 directory (~/.lemonlauncher/).  Sample configuration files can be found here:
 /usr/share/lemon-launcher/lemonlauncher.conf.sample
 /usr/share/lemon-launcher/games.conf.sample
+/usr/share/lemon-launcher/skin.conf.sample
 
 You can override the default configuration file search path by passing a static
 directory path to the configure script (--with-confdir).
+
+See ./configure --help for a complete list of build time options.
+
+
+Controls
+========
+
+| Function    | Default key    | Description                                   |
++-------------+----------------+-----------------------------------------------+
+| exit        | escape         | Exit lemon launcher                           |
++-------------+----------------+-----------------------------------------------+
+| up/down     | up/down        | Moves selection up/down                       |
++-------------+----------------+-----------------------------------------------+
+| pgup/pgdown | right/left     | Moves selection up/down by one page           |
++-------------+----------------+-----------------------------------------------+
+| reload      | 5 (coin1)      | Reload menus from games.conf                  |
++-------------+----------------+-----------------------------------------------+
+| showhide    | 6 (coin2)      | Toggle the display of hidden games/menus      |
++-------------+----------------+-----------------------------------------------+
+| select      | 1 (p1-start)   | Open menu / launch game                       |
++-------------+----------------+-----------------------------------------------+
+| back        | 2 (p2-start)   | Back to previous menu                         |
++-------------+----------------+-----------------------------------------------+
+| alphamod(*) | lctrl (p1btn1) | Page up/down modifier key - alphabetic paging |
++-------------+----------------+-----------------------------------------------+
+
+Default key mapping is based on the factory keycodes on the Ultimarc ipac and
+jpac.  See the key mapping section of lemonlauncher.conf for a list of keys and
+their function.  Note this file uses raw SDL key codes.  For a comprehensive
+list of key names and their codes see:
+/usr/share/lemon-launcher/keycodes.txt
+
+(*) Key modifiers do not correspond to raw key codes.  These values correspond
+to constants in the SDLMod enum.
 
 
 Customizing
@@ -38,15 +73,9 @@ Customizing
 
 Lemon launcher uses a set of default options which work well in most cases.
 However, lemon launcher is extensively customizable.  Copy the example
-lemonlauncher.conf file (/usr/share/lemon-launcher/lemonlauncher.conf) to your
-config directory (~/.lemonlauncher/lemon-launcher.conf) and edit with your
-favorite text editor.
-
-Default key mapping is based on the factory keycodes on the ultimarc ipac and
-jpac.  See the key mapping section of lemonlauncher.conf for a list of keys and
-their function.  Note this file uses raw SDL key codes.  For a comprehensive
-list of key names and their codes see:
-/usr/share/lemon-launcher/keycodes.txt
+lemonlauncher.conf file (/usr/share/lemon-launcher/lemonlauncher.conf.sample)
+to your config directory (~/.lemonlauncher/lemonlauncher.conf) and edit with
+your favorite text editor.
 
 Default font in lemon launcher is Bitstream Vera Sans Bold.  You can override
 this default at compile time using the --with-default-font switch to the
@@ -57,7 +86,7 @@ Skinning
 ========
 
 Lemon launcher has a rather simple skinning system which gives you control
-over the background image, font, size and possition of ui elements (title,
+over the background image, font, size and position of ui elements (title,
 list, and snapshot sections).  See default/sample skin file for more details:
 /usr/share/lemon-launcher/skin.conf.sample
 
