auto-sort root menu item fixed list item drawn below bottom bounds added first hack at new "blue" theme decreased automake version requirement

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ Nov 26/2007
+=======================
++ auto-sort root menu
++ fixed list item being drawn below bottom bounds
+
  Nov 21/2007
 =======================
 + added menu sorting in alphabetic order (enabled by default)
