--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ Dec 20/2007
+=======================
++ added a 'rotate' option for controlling the orientation of the interface
++ any 'skin' verbiage has been changed to 'theme'
+
  Nov 27/2007
 =======================
 + use stat in layout class to test if a file exists
